Phase 2; fixes